project/project/static/css/menu.css
.container {
  margin-right: 1%;
  margin-left: 1%;
  display: inline-block;
  text-align: left;
  background-color: rgba(15, 167, 227, 0.1);
  border-bottom: solid;
  width: 30%;
  height: 20%;
  color: white;
  font-size: 75%;
  font-family: Montserrat;
  border-color: white;
  margin-bottom: 1%;
  margin-top: 1%;
}

.titles {
  width: 100%;
  border-width: 1px;
  border-color: white;
  border-style: solid;
  border-left: none;
  border-right: none;
  display: table;
}

.name {
  margin-left: 1%;
  float: left;
  color: white;
  font-family: Montserrat;
  font-size: 160%;
  width: 50%;
}

.header {
  width: 100%;
  float: left;
  height: 20%;
  margin: 0;
  padding-bottom: 1%;
}

.price {
  float: right;
  width: 40%;
  text-align: right;
  color: white;
  font-family: Montserrat;
  font-size: 120%;
  text-decoration: wavy;
}

body {
  margin: 0;
  padding: 0;
}

.dishbox2 {
  float: left;
  overflow: auto;
  position: relative;
  top: 5%;
  margin-left: 6.2%;
  width: 60%;
  height: 85%;
}

.background {
  align-items: center;
  background-color: rgb(30, 40, 44);
  height: 93.2vh;
}

.dishbox2::-webkit-scrollbar {
  width: 0.7em;
}

.dishbox2::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.dishbox2::-webkit-scrollbar-thumb {
  background-color: darkgrey;
  outline: 1px solid slategrey;
}

